Text Color Fixing Contrast

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -35,7 +35,7 @@ body {
 }
 
 .text-one  {
-    color: #ffb4dabd;
+    color: #6c00dfc2;
 }
 .text-one:link{
     text-decoration: none;
